[package]
name = "os-relayer"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
agave-validator = "2.3.7"
agave-banking-stage-ingress-types = "2.3.7"
solana-sdk = "=2.3.1"
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
prost-types = "0.14.1"
solana-streamer = "2.3.7"
solana-perf = "2.3.7"
solana-client = "2.3.7"
solana-metrics = "2.3.7"
solana-commitment-config = "2.2.1"
solana-core = "2.3.7"
solana-net-utils = "2.3.7"
crossbeam-channel = "0.5.15"
serde_yaml = "0.9.33"
dashmap = "6.1.0"

[build-dependencies]
tonic-build = "0.10.2"
protobuf-src = "1.1.0"