[package]
name = "os-relayer"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
agave-validator = "2.3.7"
agave-banking-stage-ingress-types = "2.3.7"
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
prost-types = "0.12.6"
solana-sdk = "=2.3.1"
solana-streamer = "2.3.7"
solana-perf = "2.3.7"
solana-client = "2.3.7"
solana-metrics = "2.3.7"
solana-commitment-config = "2.2.1"
solana-core = "2.3.7"
solana-net-utils = "2.3.7"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.33"
dashmap = "6.1.0"
chrono = "0.4.41"
keyed_priority_queue = "0.4.2"
jwt = { version = "0.16.0", features = ["openssl"] }
openssl = "0.10.73"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
futures-util = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
prost = "0.12.6"

[build-dependencies]
tonic-build = "0.10.2"
protobuf-src = "1.1.0"